# LeMonADE-GPU

./: .gitignore  CMakeLists.txt  README.md  compile.sh  configure  gpuinfo
include/LeMonADEGPU/core/: BitPacking.h  BondVectorSet.h  GPUScBFM.h  GPUScBFMGPR_AB_Type.h  GPUScBFM_AA_Connection.h  GPUScBFM_AA_ReversibleConnection.h  GPUScBFM_AB_Connection.h  GPUScBFM_AB_ReversibleConnection.h  GPUScBFM_AB_Type.h  GPUScBFM_Tendomers.h  GPUScBFM_TendomersConnection.h  Method.h  MonomerEdges.h  SpaceFillingCurve.h  constants.cuh  kernelConnection.h
include/LeMonADEGPU/core/rngs/: Hash.h  RNGload.h  RNGtemplate.h  Saru.h  lemonade_philox.h  testTemplate.cpp
include/LeMonADEGPU/feature/: BoxCheck.h  LocaLMetropolis.h  ShearForce.h  checkDensity.h
include/LeMonADEGPU/updater/: UpdaterGPUScBFM.h  UpdaterGPUScBFMGPR_AB_Type.h  UpdaterGPUScBFM_AA_Breaking.h  UpdaterGPUScBFM_AA_Connection.h  UpdaterGPUScBFM_AB_Breaking.h  UpdaterGPUScBFM_AB_Connection.h  UpdaterGPUScBFM_AB_Type.h  UpdaterGPUScBFM_Breaking.h  UpdaterGPUScBFM_Connection.h  UpdaterGPUScBFM_Tendomers.h  UpdaterGPUScBFM_TendomersConnection.h
include/LeMonADEGPU/utility/: AutomaticThreadChooser.h  DeleteMirroredObject.h  GPUConnectionTracker.h  GPUConnectionTrackerTendomer.h  MirroredVector.h  SelectiveLogger.hpp  alignedMatrizes.h  cudacommon.hpp  graphColoring.h  graphColoring.tpp
projects/: CMakeLists.txt
projects/GPUInfo/: CMakeLists.txt  gpuinfo.cpp
projects/analyzer/: AnalyzerAbstractMSD.h  AnalyzerCrossLinkMSD.h  AnalyzerMonomerMSD.h  AnalyzerShearStrain.h  AnalyzerSystemMSD.h  AnalyzerWriteBfmFileEachConfig.h
projects/pscbfm/: CMakeLists.txt  mainCUDASimulatorGPUScBFM.cpp  mainCUDASimulatorGPUScBFM_AB_Type.cpp
projects/pscbfmConnection/: mainCUDASimulatorGPUScBFM_AB_Connection.cpp
projects/pscbfmConnectionAA/: CMakeLists.txt  mainCUDASimulatorGPUScBFM_AA_Connection.cpp
projects/pscbfmConnectionAB/: CMakeLists.txt  mainCUDASimulatorGPUScBFM_AB_Connection.cpp
projects/pscbfmGPR/: CMakeLists.txt  mainCUDASimulatorGPUScBFMGPR_AB_Type.cpp
projects/pscbfmReversibleAAConnection/: CMakeLists.txt  mainCUDASimulatorGPUScBFM_AA_ReversibleConnection.cpp
projects/pscbfmReversibleABConnection/: mainCUDASimulatorGPUScBFM_AB_ReversibleConnection.cpp
projects/pscbfmReversibleConnection/: CMakeLists.txt  mainCUDASimulatorGPUScBFM_AB_ReversibleConnection.cpp
projects/pscbfmTendomer/: CMakeLists.txt  mainCUDASimulatorGPUScBFM_Tendomer.cpp  mainCUDASimulatorGPUScBFM_TendomerConnection.cpp
src/: CMakeLists.txt
src/LeMonADEGPU/core/: BondVectorSet.cu  CMakeLists.txt  SpaceFillingCurve.cu  kernelConnection.cu  mainColorBFM.cpp
src/LeMonADEGPU/feature/: CMakeLists.txt  checkDensity.cu
src/LeMonADEGPU/updater/: CMakeLists.txt  UpdaterGPUScBFM.cu  UpdaterGPUScBFMGPR_AB_Type.cu  UpdaterGPUScBFM_AA_Breaking.cu  UpdaterGPUScBFM_AA_Connection.cu  UpdaterGPUScBFM_AB_Breaking.cu  UpdaterGPUScBFM_AB_Connection.cu  UpdaterGPUScBFM_AB_Type.cu  UpdaterGPUScBFM_Breaking.cu  UpdaterGPUScBFM_Connection.cu  UpdaterGPUScBFM_Tendomers.cu  UpdaterGPUScBFM_TendomersConnection.cu
src/LeMonADEGPU/utility/: AutomaticThreadChooser.cu  CMakeLists.txt  GPUConnectionTracker.cu  GPUConnectionTrackerTendomer.cu  SelectiveLogger.cpp  findBestZCurveFrontOrder.cpp  findMaxNeighbors.cpp  graphColoring.cpp
tests/: testCudacommon.cpp
